# b777-salty-fbw

./: .clang-format  .gitignore  Cargo.toml  README.md  manifest-base.json  manifest-base.jsonn  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
.cargo/: config.toml
migration/: layout.json  manifest.json
migration/ModelBehaviorDefs/RobSim/: B777_Autopilot.xml  Salty_Boeing.xml
migration/SimObjects/Airplanes/CS_B777-200LR_GE110B1/: flight_model.cfg
migration/html_ui/Pages/RobSim/: SaltyFMA.js
rs-captainsim-aircraft-m777-base/: layout.json  manifest.json
rs-captainsim-aircraft-m777-base/ModelBehaviorDefs/B77RS/Exterior/: B77RS_Exterior_Includes.xml
rs-captainsim-aircraft-m777-base/ModelBehaviorDefs/B77RS/Interior/: B77RS_Interior_Includes.xml
rs-captainsim-aircraft-m777-base/html_ui/JS/: B77RS_Util.js
scripts/: build_release.js
src/: tsconfig.json
src/aims/: rollup.config.js
src/aims/src/: index.ts
src/aims/src/components/: EfisLabels.ts  index.ts  (+2 more)
src/behavior/: B777_NDPanel.xml  build.js
src/behavior/src/: B77RS_Exterior_Engines.xml  B77RS_Interior_CDU.xml  B77RS_Interior_Glareshield.xml
src/instruments/: build.sh  tsconfig.json
src/rsfmc/: rollup.config.js  tsconfig.json
src/rsfmc/src/: index-200f.ts  index-300er.ts  index.ts
src/shared/src/: MathUtils.ts  NavigationDisplay.ts  autopilot.ts  flightphase.ts  flightplan.ts  notification.ts  persistence.ts  popup.ts
src/systems/b777_systems/: Cargo.toml
src/systems/b777_systems_wasm/: Cargo.toml
src/systems/b777_systems_wasm/src/: autobrakes.rs  flaps.rs  lib.rs
(+181 files in other folders)
