[package]
name = "b777_systems_wasm"
version = "0.1.0"
authors = ["FlyByWire Simulations, masterrob94"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
uom = "0.33.0"
b777_systems = { path = "../b777_systems" }
systems = { path = "../systems" }
systems_wasm = { path = "../systems_wasm" }
msfs = { git = "https://github.com/flybywiresim/msfs-rs", branch = "main" }
